1998-10-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI: Version 1.10.1 (Morimoto) released.

	* README.ja, README.en (Required environment): Modify for APEL 9.6
	and FLIM 1.11.2.

1998-10-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-play.el, mime-pgp.el, mime-partial.el, mime-image.el,
	mime-edit.el: Use `temporary-file-directory' instead of
	`mime-temp-directory'.


1998-10-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* SEMI: Version 1.10.0 (Tsubata) released.

1998-10-22  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* README.ja: New file.

1998-10-22  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el, mime-view.el: Use `(featurep 'xemacs)' instead of
	`running-xemacs'.

1998-10-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el, SEMI-ELS: Move function `mime-display-text/plain',
	`mime-display-text/enriched' and `mime-display-text/richtext' from
	mime-text to mime-view.el; abolish mime-text.el.

	* mime-play.el: Don't Require `mime-text' when compiling.

	* mime-w3.el: Require `mime' instead of `mime-text'.

1998-10-21  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* semi-setup.el (mime-setup-enable-inline-image): Use `(featurep
	'xemacs)' instead of `running-xemacs'.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.en (Required environment): Modify to require APEL 9.5 and
	FLIM 1.11.1.

	* mime-edit.el: - Don't require emu.
	                - Require invisible.

	* semi-def.el: Require poe instead of emu.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-edit.el (mime-edit-decode-buffer): Convert encoding to
	lower case.

1998-10-19  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-view.el (mime-view-ignored-field-list): Modify each element
	of initial value to include `:'.
	(mime-view-visible-field-list): Likewise.
	(mime-display-entity): Use `mime-insert-header' instead of
	`mime-insert-decoded-header'.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
